--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,23 +1,23 @@
-<header class="bg-primary-500 px-32 flex items-center justify-end fixed min-w-full top-0">
-  <div class="mr-auto font-bold text-white text-xl">
+<header class="fixed top-0 flex items-center justify-end min-w-full px-32 bg-primary-500">
+  <div class="mr-auto text-xl font-bold text-white">
     SocialFolio
   </div>
-  <nav class=" flex text-white mr-10 justify-center">
-    <ul class="flex flex-nowrap justify-center">
+  <nav class="flex justify-center mr-10 text-white ">
+    <ul class="flex justify-center flex-nowrap">
       <li class="flex items-center justify-center">
-        <a routerLink="/feed" routerLinkActive="active"  class=" flex flex-col justify-center text-center items-center text-xl font-normal leading-5 hover:text-white" style="min-height: 59px; min-width: 84px;">
+        <a routerLink="/feed" routerLinkActive="active"  class="flex flex-col items-center justify-center text-xl font-normal leading-5 text-center hover:text-white" style="min-height: 59px; min-width: 84px;">
           <fa-icon class="" [icon]="faGlobe"></fa-icon>
           <span class="text-smaller">Postagens</span>
         </a>
       </li>
       <li>
-        <a   class=" flex flex-col justify-center text-center items-center text-xl text-white font-normal leading-5" style="min-height: 59px; min-width: 84px;">
+        <a   class="flex flex-col items-center justify-center text-xl font-normal leading-5 text-center text-white " style="min-height: 59px; min-width: 84px;">
           <fa-icon class="" [icon]="faFileLines"></fa-icon>
           <span class="text-smaller">Currículo</span>
         </a>
       </li>
       <li>
-        <a  class=" flex flex-col justify-center text-center items-center text-xl text-white font-normal leading-5" style="min-height: 59px; min-width: 84px;">
+        <a routerLink="/profile" routerLinkActive="active" class="flex flex-col items-center justify-center text-xl font-normal leading-5 text-center text-white " style="min-height: 59px; min-width: 84px;">
           <fa-icon class="" [icon]="faUser"></fa-icon>
           <span class="text-smaller">Usuário</span>
         </a>
