--- a/src/app/pages/curriculo-section/curriculo-section.component.html
+++ b/src/app/pages/curriculo-section/curriculo-section.component.html
@@ -1,46 +1,46 @@
-<div class="wrapper pt-20 max-w-6xl pb-10 bg-green-500 mx-auto grid grid-cols-12 gap-6 items-start ">
+<div class="wrapper pt-20 max-w-6xl pb-10 mx-auto grid grid-cols-12 grid-rows-3 gap-8 items-start ">
 
-  <aside class="bg-slate-700 col-span-3 rounded-md">
+  <aside class="bg-slate-200 col-span-3 rounded-md p-2 overflow-hidden shadow-md ">
     aside
   </aside>
 
-  <article class="bg-slate-900 col-span-7 rounded-md">
+  <article class="bg-slate-200 col-span-7 rounded-md p-2 overflow-hidden shadow-md col-start-4">
     <h3>Sobre</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
   </article>
 
-  <aside class="bg-cyan-800 col-span-2 rounded-md justify-center ">
+  <aside class="bg-slate-200 col-span-2 rounded-md justify-center p-2 overflow-hidden shadow-md">
     aside2
   </aside>
 
-  <article class="bg-slate-900 col-span-7 rounded-md col-start-4">
+  <article class="bg-slate-200 col-span-7 rounded-md col-start-4 row-start-2 p-2 overflow-hidden shadow-md">
     <h3>Experiência</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
   </article>
 
-  <article class="bg-slate-900 col-span-7 rounded-md col-start-4">
+  <article class="bg-slate-200 col-span-7 rounded-md col-start-4 p-2 overflow-hidden shadow-md">
     <h3>Formação</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
   </article>
 
-  <article class="bg-slate-900 col-span-3 rounded-md col-start-1">
+  <article class="bg-slate-200 col-span-3 rounded-md col-start-2 p-2 overflow-hidden shadow-md">
     <h3>Habilidades</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
   </article>
 
-  <aside class="bg-slate-900 col-span-3 rounded-md justify-center col-start-4">
+  <aside class="bg-slate-200 col-span-4 rounded-md justify-center col-start-5 p-2 overflow-hidden shadow-md">
     <h3>Conhecimento</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
   </aside>
 
-  <aside class="bg-slate-900 col-span-4 rounded-md justify-center ">
-    <h3>Conhecimento</h3>
+  <aside class="bg-slate-200 col-span-3 rounded-md justify-center col-start-9 p-2 overflow-hidden shadow shadow-md">
+    <h3>Idiomas</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
   </aside>
 
