--- a/src/app/pages/curriculo-section/curriculo-section.component.html
+++ b/src/app/pages/curriculo-section/curriculo-section.component.html
@@ -1,49 +1,67 @@
-<div class="wrapper pt-20 max-w-6xl pb-10 mx-auto grid grid-cols-12 grid-rows-3 gap-8 items-start ">
+<body class="bg-slate-200">
+    <div class="wrapper pt-20 max-w-6xl pb-10 mx-auto grid grid-cols-8 grid-rows-2 gap-7 items-start">
 
-  <aside class="bg-slate-200 col-span-3 rounded-md p-2 overflow-hidden shadow-md ">
-    aside
-  </aside>
+     <!-- Perfil Sidebar na primeira linha -->
+     <app-perfil-sidebar class="col-span-2 row-span-1 h-32 my-4"></app-perfil-sidebar>
 
-  <article class="bg-slate-200 col-span-7 rounded-md p-2 overflow-hidden shadow-md col-start-4">
-    <h3>Sobre</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-  </article>
+     <!-- Sobre -->
+     <article class="bg-white col-span-4 rounded-md p-2 overflow-hidden shadow-md col-start-3 row-start-1 row-span-2">
+       <h3>Sobre</h3>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+     </article>
 
-  <aside class="bg-slate-200 col-span-2 rounded-md justify-center p-2 overflow-hidden shadow-md">
-    aside2
-  </aside>
+     <!-- Aside 2 -->
+     <aside class="bg-white col-span-4 rounded-md p-2 overflow-hidden shadow-md col-start-7 row-start-1 row-span-3">
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+     </aside>
 
-  <article class="bg-slate-200 col-span-7 rounded-md col-start-4 row-start-2 p-2 overflow-hidden shadow-md">
-    <h3>Experiência</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-  </article>
+     <!-- Experiência -->
+     <article class="bg-white col-span-4 rounded-md col-start-3 row-start-2 p-2 overflow-hidden shadow-md row-span-2">
+       <h3>Experiência</h3>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+     </article>
 
-  <article class="bg-slate-200 col-span-7 rounded-md col-start-4 p-2 overflow-hidden shadow-md">
-    <h3>Formação</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-  </article>
+     <!-- Formação -->
+     <article class="bg-white col-span-4 rounded-md col-start-3 row-start-3 p-2 overflow-hidden shadow-md">
+       <h3>Formação</h3>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+     </article>
 
-  <article class="bg-slate-200 col-span-3 rounded-md col-start-2 p-2 overflow-hidden shadow-md">
-    <h3>Habilidades</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-  </article>
+     <!-- Habilidades -->
+     <article class="bg-white col-span-3 rounded-md col-start-1 p-2 overflow-hidden shadow-md row-start-5">
+       <h3>Habilidades</h3>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+     </article>
 
-  <aside class="bg-slate-200 col-span-4 rounded-md justify-center col-start-5 p-2 overflow-hidden shadow-md">
-    <h3>Conhecimento</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-  </aside>
+     <!-- Conhecimento -->
+     <article class="bg-white col-span-3 rounded-md justify-center col-start-4 p-2 overflow-hidden shadow-md row-start-5">
+       <h3>Conhecimento</h3>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+     </article>
 
-  <aside class="bg-slate-200 col-span-3 rounded-md justify-center col-start-9 p-2 overflow-hidden shadow shadow-md">
-    <h3>Idiomas</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-  </aside>
+     <!-- Idiomas -->
+     <article class="bg-white col-span-4 rounded-md justify-center col-start-7 p-2 overflow-hidden shadow row-start-5">
+       <h3>Idiomas</h3>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+     </article>
 
-
-</div>
-
+     </div>
+</body>
