Adicionando imagem de perfil

--- a/src/app/pages/perfil-section/perfil-section.component.html
+++ b/src/app/pages/perfil-section/perfil-section.component.html
@@ -1,6 +1,8 @@
 <div class="grid items-start max-w-6xl grid-cols-12 gap-6 pt-20 mx-auto mb-12 bg-slate-200 wrapper">
     <aside class="box-border col-span-3 ml-6 text-center bg-gray-300 rounded-lg ">
         aside
+        <!-- <fa-icon [icon]="imgProfile"></fa-icon> -->
+        <img class="w-40 h-40 " src="{{imgProfile}}">
       </aside>
     <article class="col-span-7 bg-slate-900">
         article
