--- a/src/app/pages/post-section/post-section.component.html
+++ b/src/app/pages/post-section/post-section.component.html
@@ -1,12 +1,12 @@
-<div class="grid items-start max-w-6xl grid-cols-12 gap-6 pt-20 mx-auto mb-12 ">
+<div class="grid items-start max-w-6xl grid-cols-12 gap-6 pt-20 mx-auto mb-12 px-4">
   <app-perfil-sidebar class="col-span-3"></app-perfil-sidebar>
-  <main class="col-span-7">
-    <article class="bg-slate-900">
-      article
-    </article>
+  <main class="col-span-6 flex flex-col gap-4">
+    <app-post></app-post>
+    <app-post></app-post>
+    <app-post></app-post>
+    <app-post></app-post>
   </main>
-
-  <aside class="col-span-2 bg-cyan-800">
+  <aside class="col-span-3 bg-cyan-800">
     aside2
   </aside>
 </div>
