--- a/src/app/pages/curriculo-section/curriculo-section.component.html
+++ b/src/app/pages/curriculo-section/curriculo-section.component.html
@@ -1,66 +1,65 @@
-<body class="bg-slate-200">
-    <div class="wrapper pt-20 max-w-6xl pb-10 mx-auto grid grid-cols-8 grid-rows-2 gap-7 items-start">
+<body class="bg-gray-100">
+    <div class="wrapper pt-20 max-w-6xl pb-10 mx-auto grid grid-cols-8 grid-rows-2 gap-4 items-start">
 
      <!-- Perfil Sidebar na primeira linha -->
-     <app-perfil-sidebar class="col-span-2 row-span-1 h-32 my-4"></app-perfil-sidebar>
+     <app-perfil-sidebar class="col-span-2 row-span-1 h-32 mb-[2rem] "></app-perfil-sidebar>
 
      <!-- Sobre -->
-     <article class="bg-white col-span-4 rounded-md p-2 overflow-hidden shadow-md col-start-3 row-start-1 row-span-2">
-       <h3>Sobre</h3>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+     <article class="bg-white col-span-4 rounded-md p-2 shadow-md col-start-3 row-start-1 row-span-2 min-h-14 h-[9.8rem] overflow-auto align-middle">
+       <h3 class="flex justify-center font-bold uppercase text-primary-500 font-inter pb-1.3">Sobre</h3>
+       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
      </article>
 
      <!-- Aside 2 -->
-     <aside class="bg-white col-span-4 rounded-md p-2 overflow-hidden shadow-md col-start-7 row-start-1 row-span-3">
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+     <aside class="bg-white col-span-4 rounded-md p-2 shadow-md col-start-7 row-start-1 row-span-3 h-[20.8rem] overflow-auto align-middle">
+      <h3 class="flex justify-center font-bold uppercase text-primary-500 font-inter pb-1.3">Contato</h3>
+       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
      </aside>
 
      <!-- Experiência -->
-     <article class="bg-white col-span-4 rounded-md col-start-3 row-start-2 p-2 overflow-hidden shadow-md row-span-2">
-       <h3>Experiência</h3>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+     <article class="bg-white col-span-4 rounded-md col-start-3 row-start-2 p-2 shadow-md row-span-2 overflow-auto h-[9.8rem] align-middle">
+       <h3 class= "flex justify-center font-bold uppercase text-primary-500 font-inter pb-1.3">Experiências</h3>
+       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
      </article>
 
      <!-- Formação -->
-     <article class="bg-white col-span-4 rounded-md col-start-3 row-start-3 p-2 overflow-hidden shadow-md">
-       <h3>Formação</h3>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+     <article class="bg-white col-span-4 rounded-md col-start-3 row-start-3 p-2 shadow-md overflow-auto h-[6.9rem] align-middle">
+       <h3 class= "flex justify-center font-bold uppercase text-primary-500 font-inter pb-1.3">Formações</h3>
+       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
      </article>
 
      <!-- Habilidades -->
-     <article class="bg-white col-span-3 rounded-md col-start-1 p-2 overflow-hidden shadow-md row-start-5">
-       <h3>Habilidades</h3>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+     <article class="bg-white col-span-3 rounded-md col-start-1 p-2 shadow-md row-start-5 overflow-auto align-middle">
+       <h3 class= "flex justify-center font-bold uppercase text-primary-500 font-inter pb-1.3">Habilidades</h3>
+       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
      </article>
 
      <!-- Conhecimento -->
-     <article class="bg-white col-span-3 rounded-md justify-center col-start-4 p-2 overflow-hidden shadow-md row-start-5">
-       <h3>Conhecimento</h3>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+     <article class="bg-white col-span-3 rounded-md justify-center col-start-4 p-2 shadow-md row-start-5 overflow-auto align-middle">
+       <h3 class= "flex justify-center font-bold uppercase text-primary-500 font-inter pb-1.3">Conhecimentos</h3>
+       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
      </article>
 
      <!-- Idiomas -->
-     <article class="bg-white col-span-4 rounded-md justify-center col-start-7 p-2 overflow-hidden shadow row-start-5">
-       <h3>Idiomas</h3>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+     <article class="bg-white col-span-4 rounded-md justify-center col-start-7 p-2 shadow row-start-5 overflow-auto align-middle">
+       <h3 class= "flex justify-center font-bold uppercase text-primary-500 font-inter pb-1.3">Idiomas</h3>
+       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
      </article>
 
      </div>
