Finalização grid--section-curriculo

--- a/src/app/pages/curriculo-section/curriculo-section.component.html
+++ b/src/app/pages/curriculo-section/curriculo-section.component.html
@@ -7,59 +7,59 @@
      <!-- Sobre -->
      <article class="bg-white col-span-4 rounded-md p-2 shadow-md col-start-3 row-start-1 row-span-2 min-h-14 h-[9.8rem] overflow-auto align-middle">
        <h3 class="flex justify-center font-bold uppercase text-primary-500 font-inter pb-1.3">Sobre</h3>
-       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+       <p class="pl-1"> </p>
+       <!-- <p class="pl-1"> </p>
+       <p class="pl-1"> </p> -->
      </article>
 
-     <!-- Aside 2 -->
-     <aside class="bg-white col-span-4 rounded-md p-2 shadow-md col-start-7 row-start-1 row-span-3 h-[20.8rem] overflow-auto align-middle">
+     <!-- Contato -->
+     <aside class="bg-white col-span-4 rounded-md p-2 shadow-md col-start-7 row-start-1 row-span-3 h-[16.4rem] overflow-auto align-middle">
       <h3 class="flex justify-center font-bold uppercase text-primary-500 font-inter pb-1.3">Contato</h3>
-       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+       <p class="pl-1"> </p>
+       <p class="pl-1"> </p>
+       <p class="pl-1"> </p>
+       <p class="pl-1"> </p>
+       <p class="pl-1"> </p>
      </aside>
 
-     <!-- Experiência -->
+     <!-- Experiências -->
      <article class="bg-white col-span-4 rounded-md col-start-3 row-start-2 p-2 shadow-md row-span-2 overflow-auto h-[9.8rem] align-middle">
        <h3 class= "flex justify-center font-bold uppercase text-primary-500 font-inter pb-1.3">Experiências</h3>
-       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+       <p class="pl-1"> </p>
+       <p class="pl-1"> </p>
+       <p class="pl-1"> </p>
      </article>
 
-     <!-- Formação -->
+     <!-- Formações -->
      <article class="bg-white col-span-4 rounded-md col-start-3 row-start-3 p-2 shadow-md overflow-auto h-[6.9rem] align-middle">
        <h3 class= "flex justify-center font-bold uppercase text-primary-500 font-inter pb-1.3">Formações</h3>
-       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+       <p class="pl-1"> </p>
+       <p class="pl-1"> </p>
+       <p class="pl-1"> </p>
      </article>
 
      <!-- Habilidades -->
      <article class="bg-white col-span-3 rounded-md col-start-1 p-2 shadow-md row-start-5 overflow-auto align-middle">
-       <h3 class= "flex justify-center font-bold uppercase text-primary-500 font-inter pb-1.3">Habilidades</h3>
-       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+       <h3 class= "flex justify-center font-bold uppercase text-primary-500 font-inter pb-1.3 h-[6.9rem]">Habilidades</h3>
+       <p class="pl-1"> </p>
+       <p class="pl-1"> </p>
+       <p class="pl-1"> </p>
      </article>
 
-     <!-- Conhecimento -->
+     <!-- Conhecimentos -->
      <article class="bg-white col-span-3 rounded-md justify-center col-start-4 p-2 shadow-md row-start-5 overflow-auto align-middle">
-       <h3 class= "flex justify-center font-bold uppercase text-primary-500 font-inter pb-1.3">Conhecimentos</h3>
-       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+       <h3 class= "flex justify-center font-bold uppercase text-primary-500 font-inter pb-1.3 h-[6.9rem]">Conhecimentos</h3>
+       <p class="pl-1"> </p>
+       <p class="pl-1"> </p>
+       <p class="pl-1"> </p>
      </article>
 
      <!-- Idiomas -->
      <article class="bg-white col-span-4 rounded-md justify-center col-start-7 p-2 shadow row-start-5 overflow-auto align-middle">
-       <h3 class= "flex justify-center font-bold uppercase text-primary-500 font-inter pb-1.3">Idiomas</h3>
-       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-       <p class="pl-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+       <h3 class= "flex justify-center font-bold uppercase text-primary-500 font-inter pb-1.3 h-[6.9rem]">Idiomas</h3>
+       <p class="pl-1"> </p>
+       <p class="pl-1"> </p>
+       <p class="pl-1"> </p>
      </article>
 
      </div>
