--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,9 +1,9 @@
-<header class="bg-primary-500 px-32 flex items-center justify-end fixed min-w-full top-0">
+<header class="bg-primary-500 px-32 flex items-center justify-end fixed min-w-full top-0 shadow">
   <div class="mr-auto font-bold text-white text-xl">
     SocialFolio
   </div>
   <nav class=" flex text-white mr-10 justify-center">
-    <ul class="flex flex-nowrap justify-center">
+    <ul class="flex flex-nowrap justify-center gap-3 ">
       <li class="flex items-center justify-center">
         <a routerLink="/feed" routerLinkActive="active"  class=" flex flex-col justify-center text-center items-center text-xl font-normal leading-5 hover:text-white" style="min-height: 59px; min-width: 84px;">
           <fa-icon class="" [icon]="faGlobe"></fa-icon>
