--- a/src/app/pages/perfil-section/perfil-section.component.html
+++ b/src/app/pages/perfil-section/perfil-section.component.html
@@ -1,10 +1,5 @@
-<div class="grid items-start max-w-6xl grid-cols-12 gap-6 pt-20 mx-auto mb-12 bg-slate-200 wrapper">
-    <aside class="box-border col-span-3 ml-6 text-center bg-gray-300 rounded-lg ">
-        aside
-        <!-- <fa-icon [icon]="imgProfile"></fa-icon> -->
-        <img class="w-40 h-40 " src="{{imgProfile}}">
-      </aside>
-    <article class="col-span-7 bg-slate-900">
-        article
-    </article>
+<div style=" padding-bottom: 22%" class="grid items-start justify-center grid-cols-12 gap-6 pt-20 pl-10 pr-10 mx-auto  bg-slate-200 wrapper ">
+    <app-profile-side-card class="col-span-3 "></app-profile-side-card>
+    <app-profile-info class="col-span-7"></app-profile-info>
+    
 </div>
