Versão atualizada curriculo

--- a/src/app/pages/curriculo-section/curriculo-section.component.html
+++ b/src/app/pages/curriculo-section/curriculo-section.component.html
@@ -1,5 +1,5 @@
-<body class="bg-gray-100">
-    <div class="wrapper pt-20 max-w-6xl pb-10 mx-auto grid grid-cols-8 grid-rows-2 gap-4 items-start">
+
+    <div class="wrapper pt-20 max-w-6xl pb-10 mx-auto grid grid-cols-8 grid-rows-2 gap-4 items-start bg-gray-100">
 
      <!-- Perfil Sidebar na primeira linha -->
      <app-perfil-sidebar class="col-span-2 row-span-1 h-32 mb-[2rem] "></app-perfil-sidebar>
@@ -63,4 +63,4 @@
      </article>
 
      </div>
-</body>
+
