feat e refactor: Alterando estrutura de pastas para melhor organização. Adicionando serviço de autenticação e protetor de rotas

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,6 +1,7 @@
 
 <header class="bg-primary-500 px-32 flex items-center justify-end fixed min-w-full top-0 shadow">
-  <div class="mr-auto font-bold text-white text-xl">
+  <div class="mr-auto font-bold text-white text-xl flex flex-row items-center gap-2">
+    <img src="../../../assets/Vector.svg" width="50" height="50">
     SocialFolio
   </div>
   <nav class=" flex text-white mr-10 justify-center">
