--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -88,6 +88,7 @@
     <p class="mt-10 text-center text-sm text-gray-500">
       Ainda não faz parte da comunidade?
       <a
+        [routerLink]="['/register']" routerLinkActive="active"
         href="#"
         class="font-semibold leading-6 text-secondary-600 hover:text-secondary-500"
         >Seja um membro!</a
