atualizações componente registro

--- a/src/app/pages/registro/registro.component.html
+++ b/src/app/pages/registro/registro.component.html
@@ -60,7 +60,7 @@
               </div>
 
               <div class="md:col-span-3">
-                <label for="email">Email <span class="text-red-500 font-bold text-base leading-none">*</span></label>
+                <label for="email">Email<span class="text-red-500 font-bold text-base leading-none">*</span></label>
                 <input
                   type="email"
                   name="email"
@@ -93,6 +93,55 @@
                   placeholder="(00) 00000-0000"
                 />
               </div>
+
+              <div class="md:col-span-6">
+                <label for="password">Senha <span class="text-red-500 font-bold text-base leading-none">*</span></label>
+                <input
+                  type="password"
+                  name="password"
+                  id="password"
+                  class="h-10 mt-1 border-0 w-full rounded-md py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-primary-600 sm:text-sm sm:leading-6 transition duration-200"
+                  value=""
+                  placeholder=""
+                />
+              </div>
+
+              <div class="md:col-span-6">
+                <label for="confirm_password">Confirme sua senha <span class="text-red-500 font-bold text-base leading-none">*</span></label>
+                <input
+                  type="password"
+                  name="confirm_password"
+                  id="confirm_password"
+                  class="h-10 mt-1 border-0 w-full rounded-md py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-primary-600 sm:text-sm sm:leading-6 transition duration-200"
+                  value=""
+                  placeholder=""
+                />
+              </div>
+
+              <div class="md:col-span-6"><br><hr class="border border-primary-500"><br></div>
+
+              <div class="md:col-span-6">
+                <label class="block text-sm font-medium text-black">
+                Foto de Perfil
+              </label>
+              <div class="mt-1 flex justify-center px-6 pt-5 pb-6 border-2 border-gray-300 border-dashed rounded-md">
+                <div class="space-y-1 text-center">
+                  <svg class="mx-auto h-12 w-12 text-black" stroke="currentColor" fill="none" viewBox="0 0 48 48" aria-hidden="true">
+                    <path d="M28 8H12a4 4 0 00-4 4v20m32-12v8m0 0v8a4 4 0 01-4 4H12a4 4 0 01-4-4v-4m32-4l-3.172-3.172a4 4 0 00-5.656 0L28 28M8 32l9.172-9.172a4 4 0 015.656 0L28 28m0 0l4 4m4-24h8m-4-4v8m-12 4h.02" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                  </svg>
+                  <div class="flex text-sm text-gray-600">
+                    <label for="file-upload" class="relative cursor-pointer bg-primary-500 rounded-md font-medium text-black hover:text-black focus-within:outline-none focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-primary-500 p-1">
+                      <span class="">Upload a file</span>
+                      <input id="file-upload" name="file-upload" type="file" class="sr-only">
+                    </label>
+                    <p class="p-1 text-black">or drag and drop</p>
+                  </div>
+                  <p class="text-xs text-black">
+                    PNG, JPG, GIF up to 10MB
+                  </p>
+                </div>
+              </div>
+            </div>
 
               <div class="md:col-span-2">
                 <label for="country">Country / region</label>
