--- a/src/app/pages/perfil-section/components/profile-info/profile-info.component.html
+++ b/src/app/pages/perfil-section/components/profile-info/profile-info.component.html
@@ -38,6 +38,25 @@
               </div>
             </div>
             <div class="w-full px-4 lg:w-6/12">
+              <div class="w-full mb-3 ">
+                <label class="block mb-2 text-xs font-bold uppercase text-blueGray-600" htmlfor="grid-password">Profissão:</label>
+                <input name="profissao" type="text" class="w-full px-3 py-3 text-sm transition-all duration-150 ease-linear bg-white border-0 rounded shadow placeholder-blueGray-300 text-blueGray-600 focus:outline-none focus:ring "placeholder="Digite sua profissão" [(ngModel)]="profissao">
+              </div>
+            </div>
+            <div class="w-full px-4 lg:w-6/12">
+              <div class="w-full mb-3 ">
+                <label class="block mb-2 text-xs font-bold uppercase text-blueGray-600" htmlfor="grid-password">Experiencia:</label>
+                <!-- <input name="experiencia" type="text" class="w-full px-3 py-3 text-sm transition-all duration-150 ease-linear bg-white border-0 rounded shadow placeholder-blueGray-300 text-blueGray-600 focus:outline-none focus:ring "placeholder="Sobrenome" [(ngModel)]="sobrenomeUser"> -->
+
+                <select  class="w-full px-3 py-3 text-sm transition-all duration-150 ease-linear bg-white border-0 rounded shadow placeholder-blueGray-300 text-blueGray-600 focus:outline-none focus:ring"  name="experiencia" type="text" placeholder="Nome" [(ngModel)]="trampoSelecionado" (change)="onChange()">
+                  <option *ngFor="let t of niveis" [value]="t">
+                      {{ t }}
+                  </option>
+              </select>
+              </div>
+            </div>
+
+            <div class="w-full px-4 lg:w-6/12">
                 <div class="w-full mb-3 ">
                   <label class="block mb-2 text-xs font-bold uppercase text-blueGray-600" htmlfor="grid-password">Telefone:</label>
                   <input name="phone" type="text" class="w-full px-3 py-3 text-sm transition-all duration-150 ease-linear bg-white border-0 rounded shadow placeholder-blueGray-300 text-blueGray-600 focus:outline-none focus:ring "placeholder="(xx) xxxxx-xxxx" [(ngModel)]="phoneNumber">
@@ -69,10 +88,29 @@
                 <input name="city" type="email" class="w-full px-3 py-3 text-sm transition-all duration-150 ease-linear bg-white border-0 rounded shadow placeholder-blueGray-300 text-blueGray-600 focus:outline-none focus:ring" placeholder="Digite sua cidade" [(ngModel)]="cidadeUser">
               </div>
             </div>
-            
-            
+            <div class="w-full px-4 lg:w-6/12">
+              <div class="w-full mb-3 ">
+                <label class="block mb-2 text-xs font-bold uppercase text-blueGray-600" htmlfor="grid-password">Empregado:</label>
+                <select name="trabaia" type="text" class="w-full px-3 py-3 text-sm transition-all duration-150 ease-linear bg-white border-0 rounded shadow placeholder-blueGray-300 text-blueGray-600 focus:outline-none focus:ring" [(ngModel)]="trampa">
+                  <option value="">Selecione</option> 
+                  <option value="1">Sim</option>
+                  <option value="0">Não</option>
+                </select>
+              </div>
+            </div>
+            <div class="w-full px-4 lg:w-6/12">
+              <div class="w-full mb-3 ">
+                <label class="block mb-2 text-xs font-bold uppercase text-blueGray-600" htmlfor="grid-password">Empresa:</label>
+                <input name="enterprise" type="text" class="w-full px-3 py-3 text-sm transition-all duration-150 ease-linear bg-white border-0 rounded shadow placeholder-blueGray-300 text-blueGray-600 focus:outline-none focus:ring" placeholder="Digite o nome da sua empresa" [(ngModel)]="enterprise">
+              </div>
+            </div>
+            <div class="w-full px-4 lg:w-6/12">
+              <div class="w-full mb-3 ">
+                <label class="block mb-2 text-xs font-bold uppercase text-blueGray-600" htmlfor="grid-password">Local de trabalho:</label>
+                <input name="enterprise" type="text" class="w-full px-3 py-3 text-sm transition-all duration-150 ease-linear bg-white border-0 rounded shadow placeholder-blueGray-300 text-blueGray-600 focus:outline-none focus:ring" placeholder="Digite a localidade da empresa" [(ngModel)]="workplace">
+              </div>
+            </div>
           </div>
-  
           <hr class="mt-6 border-b-1 border-blueGray-300">
   
           <h6 class="mt-3 mb-6 text-sm font-bold uppercase text-blueGray-400">
@@ -80,6 +118,10 @@
           </h6>
           <div class="flex flex-wrap">
             <div class="w-full px-4 lg:w-12/12">
+              <div class="w-full mb-3 ">
+                <label class="block mb-2 text-xs font-bold uppercase text-blueGray-600" htmlfor="grid-password">Educação:</label>
+                <input name="desc" type="text" class="w-full px-3 py-3 text-sm transition-all duration-150 ease-linear bg-white border-0 rounded shadow placeholder-blueGray-300 text-blueGray-600 focus:outline-none focus:ring" rows="4" placeholder="Curso ou faculdade" [(ngModel)]="educacao"/> 
+              </div>
               <div class="w-full mb-3 ">
                 <label class="block mb-2 text-xs font-bold uppercase text-blueGray-600" htmlfor="grid-password">Sobre mim:</label>
                 <textarea name="desc" type="text" class="w-full px-3 py-3 text-sm transition-all duration-150 ease-linear bg-white border-0 rounded shadow placeholder-blueGray-300 text-blueGray-600 focus:outline-none focus:ring" rows="4" placeholder="Fale um pouco sobre você" [(ngModel)]="descricao"> </textarea>
