--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -14,7 +14,7 @@
   </div>
 
   <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
-    <form class="space-y-7" [formGroup]="loginForm">
+    <form class="space-y-7" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
       <div>
         <label
           for="email"
@@ -78,6 +78,7 @@
       <div>
         <button
           [disabled]="loginForm.invalid"
+          type="submit"
           class="disabled:cursor-not-allowed disabled:bg-transparent disabled:text-primary-500 disabled:shadow-md disabled:border disabled:border-spacing-5 disabled:border-primary-400 cursor-pointer flex w-full justify-center rounded-md bg-primary-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-primary-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-600 transition duration-300"
         >
           Entrar
