--- a/src/app/shared/components/avatar-component/avatar-component.component.html
+++ b/src/app/shared/components/avatar-component/avatar-component.component.html
@@ -1,6 +1,6 @@
 <div class="pl-2 pr-2 flex items-center gap-[3rem] bg-white w-[18.71rem] h-[9.7rem] pt-1.5 rounded-md shadow-md overflow-y-hidden">
   <div>
-  <img class="w-27 h-27 rounded-full" src="../../../../assets/imgAvatar/avatar.png" alt="">
+  <img class="w-27 h-27 rounded-full border-2 border-solid border-gray-500" src="../../../../assets/imgAvatar/avatar.png" alt="">
   <div class="font-medium text-primary-500">
       <div class="text-center">
        <h2 href="">John doe</h2>
@@ -12,7 +12,7 @@
   </div>
 
   <div>
-    <img class="w-27 h-27 rounded-full" src="../../../../assets/imgAvatar/avatar.png" alt="">
+    <img class="w-27 h-27 rounded-full border-2 border-solid border-gray-500" src="../../../../assets/imgAvatar/avatar.png" alt="">
     <div class="font-medium text-primary-500">
         <div class="text-center">John doe</div>
         <div class="text-center text-sm text-gray-500 dark:text-gray-400">Visitar</div>
@@ -20,7 +20,7 @@
   </div>
 
   <div>
-    <img class="w-27 h-27 rounded-full" src="../../../../assets/imgAvatar/avatar.png" alt="">
+    <img class="w-27 h-27 rounded-full border-2 border-solid border-gray-500" src="../../../../assets/imgAvatar/avatar.png" alt="">
     <div class="font-medium text-primary-500">
         <div class="text-center">John doe</div>
         <div class="text-center text-sm text-gray-500 dark:text-gray-400">Visitar</div>
@@ -28,7 +28,7 @@
   </div>
 
   <div>
-    <img class="w-27 h-27 rounded-full" src="../../../../assets/imgAvatar/avatar.png" alt="">
+    <img class="w-27 h-27 rounded-full border-2 border-solid border-gray-500" src="../../../../assets/imgAvatar/avatar.png" alt="">
     <div class="font-medium text-primary-500">
         <div class="text-center">John doe</div>
         <div class="text-center text-sm text-gray-500 dark:text-gray-400">Visitar</div>
