--- a/src/app/pages/registro/registro.component.html
+++ b/src/app/pages/registro/registro.component.html
@@ -174,6 +174,12 @@
                   >
                     A data é obrigatória
                   </div>
+                  <div
+                    class="mt-2 ml-1"
+                    *ngIf="registerForm.get('dataNascimento')?.errors?.['dataInvalida']"
+                  >
+                    A data deve ser menor que a data atual
+                  </div>
                 </small>
               </div>
 
