Pegando detalhes de diferentes usuários em curriculo

--- a/src/app/pages/post-section/post-section.component.html
+++ b/src/app/pages/post-section/post-section.component.html
@@ -6,7 +6,5 @@
     <app-post></app-post>
     <app-post></app-post>
   </main>
-  <aside class="col-span-3 bg-cyan-800">
-    aside2
-  </aside>
+  <app-avatar-component class="col-span-3"></app-avatar-component>
 </div>
