--- a/src/app/pages/curriculo-section/curriculo-section.component.html
+++ b/src/app/pages/curriculo-section/curriculo-section.component.html
@@ -44,7 +44,7 @@
      </aside>
 
      <!-- Habilidades -->
-     <article class="bg-white col-span-3 rounded-md col-start-1 p-2 shadow-md row-start-4 overflow-auto align-middle">
+     <article class="col-span-3 col-start-1 row-start-4 p-2 overflow-auto align-middle bg-white rounded-md shadow-md">
        <h3 class= "flex justify-center font-bold uppercase text-primary-500 font-inter pb-1.3 h-[6.9rem]">Habilidades</h3>
        <p class="pl-1"> </p>
        <p class="pl-1"> </p>
@@ -52,7 +52,7 @@
      </article>
 
      <!-- Conhecimentos -->
-     <article class="bg-white col-span-3 rounded-md justify-center col-start-4 p-2 shadow-md row-start-4 overflow-auto align-middle">
+     <article class="justify-center col-span-3 col-start-4 row-start-4 p-2 overflow-auto align-middle bg-white rounded-md shadow-md">
        <h3 class= "flex justify-center font-bold uppercase text-primary-500 font-inter pb-1.3 h-[6.9rem]">Conhecimentos</h3>
        <p class="pl-1"> </p>
        <p class="pl-1"> </p>
@@ -60,7 +60,7 @@
      </article>
 
      <!-- Idiomas -->
-     <article class="bg-white col-span-4 rounded-md justify-center col-start-7 p-2 shadow row-start-4 overflow-auto align-middle">
+     <article class="justify-center col-span-4 col-start-7 row-start-4 p-2 overflow-auto align-middle bg-white rounded-md shadow">
        <h3 class= "flex justify-center font-bold uppercase text-primary-500 font-inter pb-1.3 h-[6.9rem]">Idiomas</h3>
        <p class="pl-1"> </p>
        <p class="pl-1"> </p>
