--- a/src/app/shared/components/perfil-sidebar/perfil-sidebar.component.html
+++ b/src/app/shared/components/perfil-sidebar/perfil-sidebar.component.html
@@ -33,7 +33,7 @@
             <strong class="text-smaller uppercase font-semibold text-neutral-400 font-inter">EDUCAÇÃO</strong>
             <span class="text-smaller font-medium font-inter text-primary-500 leading-none uppercase">{{this.dadosPerfil.recent_Education}}</span>
           </div>
-          <div *ngIf="this.dadosPerfil.workplace !== null" class="flex flex-row w-full justify-between items-center">
+          <div *ngIf="this.dadosPerfil.workplace !== null && this.dadosPerfil.workplace !== ''" class="flex flex-row w-full justify-between items-center">
             <strong class="text-smaller uppercase font-semibold text-neutral-400 font-inter">EMPRESA</strong>
             <span class="text-smaller font-medium font-inter text-primary-500 leading-none uppercase">{{this.dadosPerfil.workplace.toUpperCase()}}</span>
           </div>
